feat: user endpoints to update pin, password,
