# spec/api.yaml
@@ -56,6 +56,113 @@ paths:
                      schema:
                         $ref: '#/components/schemas/ErrorResponse'
 
+   /user/username:
+      patch:
+         summary: 'Endpoint for user to change their username'
+         tags:
+            - user
+         operationId: UsernameChangeRequest
+         parameters:
+            - $ref: '#/components/parameters/AuthToken'
+         requestBody:
+            content:
+               application/json:
+                  schema:
+                     $ref: '#/components/schemas/UsernameChangeRequest'
+            required: true
+         responses:
+            '200':
+               description: 'success'
+               content:
+                  application/json:
+                     schema:
+                        $ref: '#/components/schemas/DefaultResponse'
+            '400':
+               description: 'error'
+               content:
+                  application/json:
+                     schema:
+                        $ref: '#/components/schemas/ErrorResponse'
+
+   /user/password:
+      patch:
+         summary: 'Endpoint for user to change their password'
+         tags:
+            - user
+         operationId: PasswordChangeRequest
+         parameters:
+            - $ref: '#/components/parameters/AuthToken'
+         requestBody:
+            content:
+               application/json:
+                  schema:
+                     $ref: '#/components/schemas/PasswordChangeRequest'
+            required: true
+         responses:
+            '200':
+               description: 'success'
+               content:
+                  application/json:
+                     schema:
+                        $ref: '#/components/schemas/DefaultResponse'
+            '400':
+               description: 'error'
+               content:
+                  application/json:
+                     schema:
+                        $ref: '#/components/schemas/ErrorResponse'
+
+   /user/pin:
+      patch:
+         summary: 'Endpoint for user to change their pin'
+         tags:
+            - user
+         operationId: PinChangeRequest
+         parameters:
+            - $ref: '#/components/parameters/AuthToken'
+         requestBody:
+            content:
+               application/json:
+                  schema:
+                     $ref: '#/components/schemas/PinChangeRequest'
+            required: true
+         responses:
+            '200':
+               description: 'success'
+               content:
+                  application/json:
+                     schema:
+                        $ref: '#/components/schemas/DefaultResponse'
+            '400':
+               description: 'error'
+               content:
+                  application/json:
+                     schema:
+                        $ref: '#/components/schemas/ErrorResponse'
+
+   /user:
+      get:
+         summary: 'Endpoint to fetch user details'
+         tags:
+            - user
+         operationId: GetUserDetailsRequest
+         parameters:
+            - $ref: '#/components/parameters/AuthToken'
+         responses:
+            '200':
+               description: 'success'
+               content:
+                  application/json:
+                     schema:
+                        $ref: '#/components/schemas/UserDetailsResponse'
+            '400':
+               description: 'error'
+               content:
+                  application/json:
+                     schema:
+                        $ref: '#/components/schemas/ErrorResponse'
+
+
    /savings:
       get:
          summary: 'Endpoint to get savings balance'
@@ -512,4 +619,78 @@ components:
                   },
                }
             
+      UsernameChangeRequest:
+         additionalProperties: false
+         title: UsernameChangeRequest
+         example: { username: "the_king_paluta", pin: "4321" }
+         type: object
+         properties:
+            username:
+               type: string
+            pin:
+               type: string
+            required:
+               - username
+               - pin
 
+      PasswordChangeRequest:
+         additionalProperties: false
+         title: PasswordChangeRequest
+         example: { oldPassword: "KorkuIs1", newPassword: "@DaBadest1", pin: "4321" }
+         type: object
+         properties:
+            oldPassword:
+               type: string
+            newPassword:
+               type: string
+            pin: 
+               type: string
+            required:
+               - oldPassword
+               - newPassword
+               - pin
+
+      PinChangeRequest:
+         additionalProperties: false
+         title: PinChangeRequest
+         example: { oldPin: "4321", newPin: "1234" }
+         type: object
+         properties:
+            oldPin:
+               type: string
+            newPin:
+               type: string
+            required:
+               - oldPin
+               - newPin
+            
+      UserDetailsResponse:
+         type: object
+         properties:
+            status: 
+               type: number
+            success:
+               type: string
+            message:
+               type: string
+            data:
+               type: object
+         example:
+            {
+               "status": 200,
+               "success": true,
+               "message": "User details fetched successfully",
+               "data": {
+                  "user": {
+                        "firstName": "King",
+                        "lastName": "Paluta",
+                        "phoneNumber": "08005444245",
+                        "username": "the_king_paluta",
+                        "accountNumber": "8005444245",
+                        "email": "paluta@gmail.com",
+                        "id": "cb879031-252e-4b50-93b1-a07b8a123de1"
+                  }
+               }
+            }
+               
+            
